[package]
name = "dcspkg_client"
version = "0.1.0"
edition = "2021"
authors = ["Joey Harrison <joeyh021@icloud.com>"]
rust-version = "1.63"
description = "A client library for the dcspkg API"
repository = "https://github.com/uwcs/dcspkg"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tar = "0.4.38"
reqwest = { version = "0.11.11", features = ["blocking", "json"] }
anyhow = "1.0.64"
dcspkg_common = { path = "../dcspkg-common" }
log = "0.4.17"
serde = { version = "1.0.144", features = ["derive"] }
tempfile = "3.3.0"
flate2 = "1.0.24"
serde_json = "1.0.85"
