[package]
name = "dcspkg_common"
version = "0.1.1"
edition = "2021"
authors = ["Joey Harrison <joeyh021@icloud.com>"]
rust-version = "1.62"
description = "Common types for use in other dcspkg crates"
repository = "https://github.com/uwcs/dcspkg"
license = "MIT"

[dependencies]
sqlx = { version = "0.5.13", features = ["sqlite", "runtime-tokio-rustls"] }
serde = { version = "1.0.144", features = ["derive"] }
