[package]
name = "dcspkg_create"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.85"
smol = "1.2.5"
tar = "0.4.38"
anyhow = "1"
flate2 = "1.0.24"
clap = { version = "3.2.20", features = ["derive", "cargo"] }
dialoguer = "0.10.2"
semver = "1.0.13"
url = "2.3.0"
dcspkg_common = { path = "../dcspkg-common" }
sqlx = { version = "0.6.1", features = ["sqlite", "runtime-async-std-rustls"] }
