[package]
name = "dcspkg_create"
version = "0.2.0"
edition = "2021"
authors = ["Joey Harrison <joeyh021@icloud.com>"]
rust-version = "1.62"
description = "A command line tool to create dcspkg packages"
repository = "https://github.com/uwcs/dcspkg"
license = "MIT"


[dependencies]
serde_json = "1.0.85"
smol = "1.2.5"
tar = "0.4.38"
anyhow = "1"
flate2 = "1.0.24"
clap = { version = "4.0.29", features = ["derive", "cargo"] }
dialoguer = "0.10.2"
semver = "1.0.13"
url = "2.3.0"
sqlx = { version = "0.6.2", features = ["sqlite", "runtime-tokio-rustls"] }
dcspkg = { path = "../dcspkg" }
