[package]
name = "dcspkg_server"
version = "0.1.0"
edition = "2021"
authors = ["Joey Harrison <joeyh021@icloud.com>"]
rust-version = "1.62"
description = "The web api for dcspkg"
repository = "https://github.com/uwcs/dcspkg"
license = "MIT"

[dependencies]
sqlx = { version = "0.6.2", features = ["sqlite"] }
rocket = { version = "0.5.0-rc.2", features = ["json"] }
dotenv = "0.15.0"
serde = { version = "1.0.144", features = ["derive"] }
anyhow = "1.0.64"
dcspkg = { path = "../dcspkg" }
