[package]
name = "dcspkg"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
config = { version = "0.13.2", features = ["toml"] }
clap = { version = "3.2.20", features = ["derive", "cargo"] }
env_logger = "0.9"
dcspkg_client = { path = "../dcspkg-client" }
anyhow = "1"
serde = { version = "1.0", features = ["derive"] }
lazy_static = "1.4.0"
home = "0.5.3"
toml = "0.5.9"
