[package]
name = "dcspkg"
version = "0.1.0"
edition = "2021"
authors = ["Joey Harrison <joeyh021@icloud.com>"]
rust-version = "1.63"
description = "A command line installer and runner for dcspkg"
repository = "https://github.com/uwcs/dcspkg"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tabular = "0.2.0"
config = { version = "0.13.2", features = ["toml"] }
clap = { version = "3.2.20", features = ["derive", "cargo"] }
env_logger = "0.9.0"
dcspkg_client = { path = "../dcspkg-client" }
anyhow = "1.0.64"
serde = { version = "1.0.144", features = ["derive"] }
lazy_static = "1.4.0"
home = "0.5.3"
toml = "0.5.9"
log = "0.4.17"
serde_json = "1.0.85"
