[package]
name = "dcspkg"
version = "0.2.0"
edition = "2021"
authors = ["Joey Harrison <joeyh021@icloud.com>"]
rust-version = "1.62"
description = "A command line installer and runner for dcspkg"
repository = "https://github.com/uwcs/dcspkg"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tabular = "0.2.0"
config = { version = "0.13.2", features = ["toml"] }
clap = { version = "4.0.29", features = ["derive", "cargo"] }
env_logger = "0.10.0"
anyhow = "1.0.64"
serde = { version = "1.0.144", features = ["derive"] }
lazy_static = "1.4.0"
home = "0.5.3"
toml = "0.5.9"
log = "0.4.17"
serde_json = "1.0.85"
tar = "0.4.38"
reqwest = { version = "0.11.11", features = ["blocking", "json", "rustls"] }
tempfile = "3.3.0"
flate2 = "1.0.24"
bytes = "1.2.1"

[lib]
name = "dcspkg"
path = "src/lib.rs"

[[bin]]
name = "dcspkg"
path = "src/main.rs"
