[package]
name = "packager"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tar = "0.4.38"
anyhow = "1"
log = "0.4.17"
env_logger = "0.9.0"
flate2 = "1.0.24"
clap = { version = "3.2.20", features = ["derive", "cargo"] }
dialoguer = "0.10.2"
semver = "1.0"
url = "2.3.0"
