[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.2", features = ["json"] }
dotenv = "0.15.0"
serde = { version = "1.0", features = ["derive"] }
anyhow = "1"
rocket_db_pools = { version = "0.1.0-rc.2", features = ["sqlx_sqlite"] }

[lib]
name = "dcspkg_server"
path = "src/lib.rs"

[[bin]]
name = "server"
path = "src/server.rs"
