[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.2", features = ["json"] }
dotenv = "0.15.0"
serde = { version = "1.0", features = ["derive"] }
anyhow = "1"
semver = "1.0"
# we have to depend directly on sqlx due to macro fuckery
rocket_db_pools = { version = "0.1.0-rc.2", features = ["sqlx_sqlite"] }
sqlx = { version = "0.5", features = ["sqlite", "runtime-tokio-rustls"] }

[lib]
name = "dcspkg_server"
path = "src/lib.rs"

[[bin]]
name = "server"
path = "src/server.rs"
